ci: retry npm install

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm install
+      - run: npx npm-install-retry
       - run: npm run lint
 
   test:
@@ -46,7 +46,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
+      - run: npx npm-install-retry
       - run: npm run coverage
         env:
           CI: true
@@ -75,7 +75,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm install
+      - run: npx npm-install-retry
       - run: node certification/docker &
         env:
           ISSUER: https://172.17.0.1:3000
@@ -88,7 +88,7 @@ jobs:
         run: |
             cd oidc-provider-conformance-tests
             git checkout local-certification
-            npm install
+            npx npm-install-retry
             npm run ${{ matrix.script }}
 
   fapi-conformance:
@@ -108,7 +108,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm install
+      - run: npx npm-install-retry
       - run: node certification/fapi &
         env:
           ISSUER: https://172.17.0.1:3000
