chore: add package.json tags

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "identity",
     "implicit",
     "koa",
+    "oauth",
     "oauth 2.0",
+    "oauth2",
     "oidc",
     "openid",
     "provider",
