--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "base64url": "^3.0.1",
     "chai": "^4.2.0",
     "clear-module": "^4.0.0",
-    "dtslint": "^1.0.2",
+    "dtslint": "^2.0.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -84,8 +84,7 @@
     "paseto": "^1.0.3",
     "sinon": "^7.5.0",
     "supertest": "^4.0.2",
-    "timekeeper": "^2.2.0",
-    "typescript": "^3.6.4"
+    "timekeeper": "^2.2.0"
   },
   "engines": {
     "node": "^10.13.0 || >=12.0.0"
