chore: add funding to package.json

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lib",
     "types/index.d.ts"
   ],
+  "funding": "https://github.com/sponsors/panva",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
   "scripts": {
