--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "base64url": "^3.0.1",
     "chai": "^4.2.0",
     "clear-module": "^4.0.0",
+    "connect": "^3.7.0",
     "dtslint": "^2.0.2",
     "eslint": "^6.7.1",
     "eslint-config-airbnb-base": "^14.0.0",
