--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,9 +46,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npx panva/npm-install-retry
-      - run: npm run coverage
-        env:
-          CI: true
+      - run: npm run ci
       - env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: npx codecov
