--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "express": "^4.17.1",
+    "fastify": "^2.11.0",
     "https-pem": "^2.0.0",
     "husky": "^3.1.0",
     "koa-body": "^4.1.1",
