ci: run ci with hapi too

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "dynamic",
     "express",
     "fapi",
+    "fastify",
+    "hapi",
     "hybrid",
     "identity",
     "implicit",
     "koa",
-    "oauth",
     "oauth 2.0",
+    "oauth",
     "oauth2",
     "oidc",
     "openid",
@@ -65,6 +67,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@hapi/hapi": "^18.4.0",
     "base64url": "^3.0.1",
     "chai": "^4.2.0",
     "clear-module": "^4.0.0",
