--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "timekeeper": "^2.2.0"
   },
   "engines": {
-    "node": "^10.13.0 || >=12.0.0"
+    "node": "^12.19.0 || ^14.15.0"
   },
   "nyc": {
     "cache": false,
