--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "paseto": "^1.0.5",
     "sinon": "^9.0.0",
     "supertest": "^4.0.2",
-    "timekeeper": "^2.2.0"
+    "timekeeper": "^2.2.0",
+    "typescript": "^3.8.3"
   },
   "engines": {
     "node": "^10.13.0 || >=12.0.0"
