--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "ci": "node ./test/ci",
     "coverage": "nyc node ./test/run",
     "heroku-postbuild": "npm install mongodb@^3.0.0 openid-client@^3.0.0",
-    "lint": "eslint lib example certification test && dtslint types",
+    "lint": "eslint lib example certification test",
+    "lint-ts": "npx typescript@~3.6.0 --build types",
     "lint-fix": "eslint lib example certification test --fix",
     "test": "node ./test/run"
   },
@@ -71,7 +72,6 @@
     "chai": "^4.2.0",
     "clear-module": "^4.0.0",
     "connect": "^3.7.0",
-    "dtslint": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
@@ -91,8 +91,7 @@
     "paseto": "^1.0.5",
     "sinon": "^9.0.0",
     "supertest": "^4.0.2",
-    "timekeeper": "^2.2.0",
-    "typescript": "^3.8.3"
+    "timekeeper": "^2.2.0"
   },
   "engines": {
     "node": "^10.13.0 || >=12.0.0"
