--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@types/koa": "^2.11.4",
+    "cacheable-lookup": "^5.0.3",
     "debug": "^4.1.1",
     "ejs": "^3.1.5",
-    "got": "^9.6.0",
+    "got": "^11.1.3",
     "jose": "^2.0.4",
     "jsesc": "^3.0.1",
     "koa": "^2.13.0",
