ci: add oidc-java-conformance job and refactor to cache

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,25 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@v1
+      - name: Checkout
+        uses: actions/checkout@master
+      - name: Setup node
+        uses: actions/setup-node@v2-beta
         with:
           node-version: 12
-      - run: npx panva/npm-install-retry
+      - name: Store node version variable
+        id: node
+        run: |
+          echo "::set-output name=version::$(node -v)"
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        id: node_modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package.json') }}-${{ steps.node.outputs.version }}
+      - name: Install dependencies
+        run: npx panva/npm-install-retry
+        if: steps.node_modules.outputs.cache-hit != 'true'
       - run: npm run lint
       - run: npm run lint-ts
 
@@ -42,102 +56,199 @@ jobs:
           - windows-latest
           - macOS-latest
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@v1
+      - name: Checkout
+        uses: actions/checkout@master
+      - name: Setup node
+        uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npx panva/npm-install-retry
+      - name: Store node version variable
+        id: node
+        run: |
+          echo "::set-output name=version::$(node -v)"
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        id: node_modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package.json') }}-${{ steps.node.outputs.version }}
+      - name: Install dependencies
+        run: npx panva/npm-install-retry
+        if: steps.node_modules.outputs.cache-hit != 'true'
       - run: npm run ci
       - env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: npx codecov
 
-  oidc-conformance:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        script:
-          - code
-          - id_token
-          - id_token+token
-          - code+id_token
-          - code+id_token+token
-          - code+token
-    env:
-      ISSUER: https://172.17.0.1:3000
-      NODE_TLS_REJECT_UNAUTHORIZED: 0
-    steps:
-      - run: |
-          docker pull panvafs/oidc-certification-op-ci
-          docker run -d -p "60000-60010:60000-60010" panvafs/oidc-certification-op-ci
-          while ! curl -sk https://127.0.0.1:60000 >/dev/null; do sleep 2; done
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: npx panva/npm-install-retry
-      - run: node certification/docker &
-      - run: git clone https://github.com/panva/oidc-provider-conformance-tests.git
-      - env:
-          TEST_HOSTNAME: 127.0.0.1
-        run: |
-            cd oidc-provider-conformance-tests
-            git checkout local-certification
-            npx panva/npm-install-retry
-            npm run ${{ matrix.script }}
-
   fapi-conformance:
     runs-on: ubuntu-latest
     env:
+      VERSION: release-v4.0.7
       SUITE_BASE_URL: https://localhost.emobix.co.uk:8443
       NODE_TLS_REJECT_UNAUTHORIZED: 0
       PLAN_NAME: fapi-rw-id2-test-plan
     steps:
-      - uses: actions/checkout@master
-      - env:
+      - name: Checkout
+        uses: actions/checkout@master
+      - name: Setup node
+        uses: actions/setup-node@v2-beta
+        with:
+          node-version: 12
+      - name: Store node version variable
+        id: node
+        run: |
+          echo "::set-output name=version::$(node -v)"
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        id: node_modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package.json') }}-${{ steps.node.outputs.version }}
+      - name: Install dependencies
+        run: npx panva/npm-install-retry
+        if: steps.node_modules.outputs.cache-hit != 'true'
+      - name: Run oidc-provider
+        run: node certification/fapi &
+        env:
+          DEBUG: oidc-provider:*
+          ISSUER: https://172.17.0.1:3000
+          NODE_OPTIONS: --tls-cipher-list="ECDHE-ECDSA-AES128-GCM-SHA256 ECDHE-ECDSA-AES256-GCM-SHA384 ECDHE-RSA-AES128-GCM-SHA256 ECDHE-RSA-AES256-GCM-SHA384"
+      - name: Cache Conformance Suite Build
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: ./conformance-suite
+          key: suite-${{ env.VERSION }}
+      - name: Conformance Suite Build
+        if: steps.cache.outputs.cache-hit != 'true'
+        env:
           MAVEN_CACHE: ./m2
         run: |
           git clone https://gitlab.com/openid/conformance-suite.git
           cd conformance-suite
-          git checkout release-v4.0.7
+          git checkout $VERSION
           sed -i -e 's/localhost/localhost.emobix.co.uk/g' src/main/resources/application.properties
-          sed -i -e 's/-B/-B -DskipTests=true/g' builder-compose.yml
+          sed -i -e 's/-B clean/-B -DskipTests=true/g' builder-compose.yml
           docker-compose -f builder-compose.yml run builder
+      - name: Run Conformance Suite
+        run: |
+          cd conformance-suite
           docker-compose -f docker-compose-dev.yml up -d
           while ! curl -skfail https://localhost.emobix.co.uk:8443/api/runner/available >/dev/null; do sleep 2; done
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: npx panva/npm-install-retry
-      - run: node certification/fapi &
-        env:
-          ISSUER: https://172.17.0.1:3000
-          NODE_OPTIONS: --tls-cipher-list="ECDHE-ECDSA-AES128-GCM-SHA256 ECDHE-ECDSA-AES256-GCM-SHA384 ECDHE-RSA-AES128-GCM-SHA256 ECDHE-RSA-AES256-GCM-SHA384"
-      - run: |
+      - name: Adjust configuration files for CI
+        run: |
           sed -i -e 's/mtls.fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/mtls.json
           sed -i -e 's/fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/mtls.json
           sed -i -e 's/mtls.fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/pkjwt.json
           sed -i -e 's/fapi.panva.cz/172.17.0.1:3000/g' certification/fapi/pkjwt.json
-      - name: Run private_key_jwt variant
-        run: npx mocha --delay --timeout 0 --retries 2 certification/runner
+      - name: Run test plans
+        run: |
+          npx concurrently \
+          "CONFIGURATION='./certification/fapi/pkjwt.json' VARIANT='{\"client_auth_type\":\"private_key_jwt\",\"fapi_profile\":\"plain_fapi\",\"fapi_response_mode\":\"plain_response\"}' mocha --delay --timeout 0 --retries 0 certification/runner" \
+          "CONFIGURATION='./certification/fapi/mtls.json' VARIANT='{\"client_auth_type\":\"mtls\",\"fapi_profile\":\"plain_fapi\",\"fapi_response_mode\":\"plain_response\"}' mocha --delay --timeout 0 --retries 0 certification/runner" \
+          "CONFIGURATION='./certification/fapi/pkjwt.json' VARIANT='{\"client_auth_type\":\"private_key_jwt\",\"fapi_profile\":\"plain_fapi\",\"fapi_response_mode\":\"jarm\"}' mocha --delay --timeout 0 --retries 0 certification/runner" \
+          "CONFIGURATION='./certification/fapi/mtls.json' VARIANT='{\"client_auth_type\":\"mtls\",\"fapi_profile\":\"plain_fapi\",\"fapi_response_mode\":\"jarm\"}' mocha --delay --timeout 0 --retries 0 certification/runner"
+      - name: Upload test artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          path: export-*.zip
+          name: fapi certification html results
+        if: always()
+      - name: Stop Conformance Suite
+        run: |
+          cd conformance-suite
+          docker-compose -f docker-compose-dev.yml down
+          sudo rm -rf mongo
+
+  oidc-conformance:
+    runs-on: ubuntu-latest
+    env:
+      VERSION: release-v4.0.7
+      SUITE_BASE_URL: https://localhost.emobix.co.uk:8443
+      NODE_TLS_REJECT_UNAUTHORIZED: 0
+      SETUP: ${{ matrix.setup }}
+    strategy:
+      matrix:
+        setup:
+          - '{"plan":"oidcc-basic-certification-test-plan","server_metadata":"discovery","client_registration":"dynamic_client"}'
+          - '{"plan":"oidcc-hybrid-certification-test-plan","server_metadata":"discovery","client_registration":"dynamic_client"}'
+          - '{"plan":"oidcc-implicit-certification-test-plan","server_metadata":"discovery","client_registration":"dynamic_client"}'
+          - '{"plan":"oidcc-config-certification-test-plan"}'
+          - '{"plan":"oidcc-dynamic-certification-test-plan","response_type":"code","skip":"oidcc-server-rotate-keys"}'
+          - '{"plan":"oidcc-dynamic-certification-test-plan","response_type":"id_token","skip":"oidcc-server-rotate-keys"}'
+          - '{"plan":"oidcc-dynamic-certification-test-plan","response_type":"id_token token","skip":"oidcc-server-rotate-keys"}'
+          - '{"plan":"oidcc-dynamic-certification-test-plan","response_type":"code id_token","skip":"oidcc-server-rotate-keys"}'
+          - '{"plan":"oidcc-dynamic-certification-test-plan","response_type":"code token","skip":"oidcc-server-rotate-keys"}'
+          - '{"plan":"oidcc-dynamic-certification-test-plan","response_type":"code id_token token","skip":"oidcc-server-rotate-keys"}'
+          - '{"plan":"oidcc-backchannel-rp-initiated-logout-certification-test-plan","response_type":"code","client_registration":"dynamic_client"}'
+          - '{"plan":"oidcc-frontchannel-rp-initiated-logout-certification-test-plan","response_type":"code","client_registration":"dynamic_client"}'
+          - '{"plan":"oidcc-rp-initiated-logout-certification-test-plan","response_type":"code","client_registration":"dynamic_client"}'
+          - '{"plan":"oidcc-session-management-certification-test-plan","response_type":"code","client_registration":"dynamic_client","skip":"oidcc-session-management-rp-initiated-logout"}'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@master
+      - name: Setup node
+        uses: actions/setup-node@v2-beta
+        with:
+          node-version: 12
+      - name: Store node version variable
+        id: node
+        run: |
+          echo "::set-output name=version::$(node -v)"
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        id: node_modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package.json') }}-${{ steps.node.outputs.version }}
+      - name: Install dependencies
+        run: npx panva/npm-install-retry
+        if: steps.node_modules.outputs.cache-hit != 'true'
+      - name: Run oidc-provider
+        run: node certification/docker &
         env:
-          VARIANT: '{"client_auth_type":"private_key_jwt","fapi_profile":"plain_fapi","fapi_response_mode":"plain_response"}'
-          CONFIGURATION: ./certification/fapi/pkjwt.json
-      - name: Run mtls variant
-        run: npx mocha --delay --timeout 0 --retries 2 certification/runner
+          DEBUG: oidc-provider:*
+          ISSUER: https://172.17.0.1:3000
+      - name: Cache Conformance Suite Build
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: ./conformance-suite
+          key: suite-${{ env.VERSION }}
+      - name: Conformance Suite Build
+        if: steps.cache.outputs.cache-hit != 'true'
         env:
-          VARIANT: '{"client_auth_type":"mtls","fapi_profile":"plain_fapi","fapi_response_mode":"plain_response"}'
-          CONFIGURATION: ./certification/fapi/mtls.json
-      - name: Run private_key_jwt-jarm variant
-        run: npx mocha --delay --timeout 0 --retries 2 certification/runner
+          MAVEN_CACHE: ./m2
+        run: |
+          git clone https://gitlab.com/openid/conformance-suite.git
+          cd conformance-suite
+          git checkout $VERSION
+          sed -i -e 's/localhost/localhost.emobix.co.uk/g' src/main/resources/application.properties
+          sed -i -e 's/-B clean/-B -DskipTests=true/g' builder-compose.yml
+          docker-compose -f builder-compose.yml run builder
+      - name: Run Conformance Suite
+        run: |
+          cd conformance-suite
+          docker-compose -f docker-compose-dev.yml up -d
+          while ! curl -skfail https://localhost.emobix.co.uk:8443/api/runner/available >/dev/null; do sleep 2; done
+      - name: Adjust configuration files for CI
+        run: |
+          sed -i -e 's/op.panva.cz/172.17.0.1:3000/g' certification/plan.json
+      - name: Run ${{ matrix.setup }}
+        run: npx mocha --delay --timeout 0 --retries 0 certification/runner
         env:
-          VARIANT: '{"client_auth_type":"private_key_jwt","fapi_profile":"plain_fapi","fapi_response_mode":"jarm"}'
-          CONFIGURATION: ./certification/fapi/pkjwt.json
-      - name: Run mtls-jarm variant
-        run: npx mocha --delay --timeout 0 --retries 2 certification/runner
-        env:
-          VARIANT: '{"client_auth_type":"mtls","fapi_profile":"plain_fapi","fapi_response_mode":"jarm"}'
-          CONFIGURATION: ./certification/fapi/mtls.json
+          CONFIGURATION: ./certification/plan.json
+      - name: Upload test artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          path: export-*.zip
+          name: oidc certification html results
+        if: always()
+      - name: Stop Conformance Suite
+        run: |
+          cd conformance-suite
+          docker-compose -f docker-compose-dev.yml down
+          sudo rm -rf mongo
 
   deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
@@ -152,7 +263,8 @@ jobs:
           - radiant-refuge-93411
           - powerful-cove-31049
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@master
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.x
