--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "koa-router": "^7.4.0",
     "lodash": "^4.17.19",
     "mocha": "^8.0.1",
+    "mocha.parallel": "^0.15.6",
     "moment": "^2.27.0",
     "nock": "^12.0.3",
     "nyc": "^15.1.0",
