docs: update for fastify@3 and hapi@20

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.1",
-    "@hapi/hapi": "^18.4.1",
+    "@hapi/hapi": "^20.0.0",
     "base64url": "^3.0.1",
     "chai": "^4.2.0",
     "clear-module": "^4.1.1",
@@ -75,7 +75,7 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "express": "^4.17.1",
-    "fastify": "^2.15.2",
+    "fastify": "^3.2.0",
     "https-pem": "^2.0.0",
     "husky": "^4.2.5",
     "koa-body": "^4.2.0",
@@ -84,6 +84,7 @@
     "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.19",
+    "middie": "^5.1.0",
     "mocha": "^8.1.1",
     "mocha.parallel": "^0.15.6",
     "moment": "^2.27.0",
