refactor: replaced lru-cache with quick-lru
Request URI Cache no longer expires based on the
response cache headers.

--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "jsesc": "^3.0.1",
     "koa": "^2.13.0",
     "koa-compose": "^4.1.0",
-    "lru-cache": "^6.0.0",
     "nanoid": "^3.1.10",
     "object-hash": "^2.0.3",
     "oidc-token-hash": "^5.0.1",
+    "quick-lru": "^5.1.1",
     "raw-body": "^2.4.1"
   },
   "devDependencies": {
